# archival-rights-role-classifier

./: README.md  cv_entry.txt
Legal-Sentence-Role-Classification-main/: .gitignore  README.md  pyproject.toml  test_text.txt
Legal-Sentence-Role-Classification-main/src/: finding_aid.py  pii_filter.py  segmentation_pipeline.py  sentence_encoder.py  webapp.py
Legal-Sentence-Role-Classification-main/src/classification/: prediction.py
Legal-Sentence-Role-Classification-main/web_app_templates/: index.html
